force-app/main/default/objects/FieloCH__Team__c/fields/FieloCH__Picture__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Picture__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;+ $Setup.FieloEE__PublicSettings__c.FieloEE__ChallengesPrefix__c + FieloCH__AttachmentId__c, Name, 60, 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>