force-app/main/default/objects/FieloCH__Team__c/fields/FieloCH__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>FieloEE__Program__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>