force-app/main/default/objects/FieloCH__Team__c/validationRules/FieloCH__Program_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Program_Required</fullName>
    <active>true</active>
    <description>Checks that when editing a team, program field is completed</description>
    <errorConditionFormula>AND(NOT( ISNEW() ), OR(ISNULL( FieloCH__Program__c ),  ISBLANK(FieloCH__Program__c) ) )</errorConditionFormula>
    <errorDisplayField>FieloCH__Program__c</errorDisplayField>
    <errorMessage>The Team must belong to a Program.</errorMessage>
</ValidationRule>