force-app/main/default/objects/FieloCH__Team__c/listViews/FieloCH__All.listView-meta.xml
<ListView>
    <fullName>FieloCH__All</fullName>
    <columns>NAME</columns>
    <columns>FieloCH__Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>